tests/baselines/reference/identicalCallSignatures.errors.txt
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(4,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(5,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(6,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(7,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(11,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(12,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(16,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(17,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(18,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts(19,5): error TS2463: Duplicate overload signature for call signature.


==== tests/cases/conformance/types/objectTypeLiteral/callSignatures/identicalCallSignatures.ts (10 errors) ====
    // Each pair of call signatures in these types have a duplicate signature error.
    // Identical call signatures should generate an error.
    interface I {
        (x): number;
        ~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        (x: any): number;
        ~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <T>(x: T): T;
        ~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <U>(x: U): U; // error
        ~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }
    
    interface I2<T> {
        (x: T): T;
        ~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        (x: T): T; // error
        ~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }
    
    var a: {
        (x): number;
        ~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        (x: any): number;
        ~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <T>(x: T): T;
        ~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        <T>(x: T): T; // error
        ~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }